kustomize/cv/cv-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cv-philiplehmann
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 100%
      maxUnavailable: 0
  selector:
    matchLabels:
      app: cv-philiplehmann
  template:
    metadata:
      labels:
        app: cv-philiplehmann
    spec:
      imagePullSecrets:
        - name: docker-registry-harbor
      containers:
        - name: cv-philiplehmann
          image: ghcr.io/philip-lehmann/cv:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "150Mi"
              cpu: "0.1"
            limits:
              memory: "300Mi"
              cpu: "1"
          volumeMounts:
            - name: pdf
              mountPath: /app/pdf
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            readOnlyRootFilesystem: false
            runAsNonRoot: true
            runAsUser: 1000
            capabilities: {}
          livenessProbe:
            httpGet:
              path: /api/health/liveness_check
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 15
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /api/health/readiness_check
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 15
            failureThreshold: 3
          startupProbe:
            failureThreshold: 10
            httpGet:
              path: /
              port: 3000
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 15
            successThreshold: 1
            timeoutSeconds: 5

      restartPolicy: Always
      volumes:
        - name: pdf
          emptyDir:
            sizeLimit: 20Mi
