kustomize/cv/cv-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cv-philiplehmann
spec:
  selector:
    app: cv-philiplehmann
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
