kustomize/cv/cv-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: cv-philiplehmann
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-http

spec:
  gatewayClassName: istio
  listeners:
  - name: https-cv
    hostname: cv.philiplehmann.ch
    port: 443
    protocol: HTTPS
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        name: cv-philiplehmann-cert
    allowedRoutes:
      namespaces:
        from: Same
  - name: https-root
    hostname: philiplehmann.ch
    port: 443
    protocol: HTTPS
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        name: philiplehmann-cert
    allowedRoutes:
      namespaces:
        from: Same
  - name: https-www
    hostname: www.philiplehmann.ch
    port: 443
    protocol: HTTPS
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        name: philiplehmann-cert
    allowedRoutes:
      namespaces:
        from: Same


---

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: cv-philiplehmann
spec:
  parentRefs:
  - name: cv-philiplehmann
  hostnames:
  - cv.philiplehmann.ch
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: cv-philiplehmann
      port: 3000


---

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: philiplehmann
spec:
  parentRefs:
  - name: cv-philiplehmann
  hostnames:
  - philiplehmann.ch
  - www.philiplehmann.ch
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: cv-philiplehmann
      port: 3000
