kustomize/cv/cv-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cv-philiplehmann
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-http
    nginx.ingress.kubernetes.io/enable-modsecurity: "true"
    nginx.ingress.kubernetes.io/enable-owasp-core-rules: "true"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_set_headers "X-Frame-Options: Deny";
      more_set_headers "X-Xss-Protection: 1; mode=block";
      more_set_headers "X-Content-Type-Options: nosniff";
      more_set_headers "Referrer-Policy: strict-origin";
      more_set_headers "Content-Security-Policy: default-src 'self'; script-src 'self'; script-src-elem 'self' 'unsafe-inline' https://www.googletagmanager.com; script-src-attr 'self'; style-src 'self' 'unsafe-inline'; img-src 'self' https://storage.riwi.dev https://*.google-analytics.com https://*.analytics.google.com https://www.googletagmanager.com https://*.geo.admin.ch; font-src 'self'; connect-src 'self' https://storage.riwi.dev https://*.google-analytics.com https://*.analytics.google.com [...]

spec:
  ingressClassName: nginx
  rules:
  - host: cv.philiplehmann.ch
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: cv-philiplehmann
            port:
              number: 3000
  tls:
  - hosts:
    - cv.philiplehmann.ch
    secretName: cv-philiplehmann-cert


---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: philiplehmann
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-http
    nginx.ingress.kubernetes.io/enable-modsecurity: "true"
    nginx.ingress.kubernetes.io/enable-owasp-core-rules: "true"
    nginx.ingress.kubernetes.io/server-snippet: |
      return 301 $scheme://cv.philiplehmann.ch$request_uri;
spec:
  ingressClassName: nginx
  rules:
  - host: philiplehmann.ch
    http: &HTTP
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: cv-philiplehmann
            port:
              number: 3000
  - host: www.philiplehmann.ch
    http: *HTTP
  tls:
  - hosts:
    - philiplehmann.ch
    - www.philiplehmann.ch
    secretName: philiplehmann-cert
